👍日本語化の準備と表示内容の調整

--- a/config/locales/model.ja.yml
+++ b/config/locales/model.ja.yml
@@ -2,3 +2,8 @@ ja:
   activerecord:
     models:
       user: 'ユーザー'
+      project: 経歴
+      profile: 自己紹介
+      conduct: 役割
+      employment: 雇用形態
+      technology: 使用技術
