--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -36,4 +36,17 @@ ja:
         one:   "1年以上"
         other: "%{count}年以上"
   date:
-    month_names: 月
+    month_names:
+      - "~"
+      - "1"
+      - "2"
+      - "3"
+      - "4"
+      - "5"
+      - "6"
+      - "7"
+      - "8"
+      - "9"
+      - "10"
+      - "11"
+      - "12"
